# divergence-z

./: .env.example  EthicalRestrictions.md  README.md  Result.md  pyproject.toml
Result/ONEPIEC/: Luffy.json
Result/ReZERO/: Rem&Subaru.md  Rem&Subaru_v33.md  rem_subaru_zero_v3_result.json
Result/STEINSGATE/: DUALVOICE.md  Okabe&Kurisu.md  makiseKurisu.json  mayuri_zero17_result.json  persona_voice.md
Result/Shakespeare/: persona_voice.md
divergence_z/: README.md  __init__.py  episode_generator.py  iap_evaluator.py  persona_extractor.py  persona_generator.py  persona_voice.py  yaml_formatter.py  yaml_generator.py  z_axis_dialogue.py  z_axis_reverse.py  z_axis_translate.py  zap_evaluator.py
divergence_z/Episode/: 椎名まゆり_Episode.yaml
divergence_z/episode/: 如月千早_Episode.yaml  椎名まゆり_Episode.yaml
divergence_z/episodes/: アルベド_Episode.yaml  ナツキ・スバル_Episode.yaml  レム_Episode.yaml  宝鐘マリン_Episode.yaml  岡部倫太郎_Episode.yaml  惣流・アスカ・ラングレー_Episode.yaml  月岡恋鐘_Episode.yaml  橋田至ダル_Episode.yaml  牧瀬紅莉栖_Episode.yaml
divergence_z/personas/: captain_v2.yaml  julia_extracted_v33.yaml  juliet_extracted_v33.yaml  juliette_extracted_v33.yaml  kurisu_makise_v31_en.yaml  kurisu_v2.yaml  luffy_v2.yaml  protagonist_v2.yaml  tomoe_v2.yaml  アルベド_v33.yaml  セブルス_スネイプ_v3.yaml  ヂューリエット_extracted_v3.yaml  ヂューリエット_extracted_v31.yaml  ナツキ_スバル_v3.yaml  ナツキ_スバル_v33.yaml  レム_v3.yaml  レム_v33.yaml  八神月_v2.yaml  如月千早_v33.yaml  宝鐘マリン_v33.yaml  岡部倫太郎_v2.yaml  岡部倫太郎_v3.yaml  岡部倫太郎_v33.yaml  惣流_アスカ_ラングレー_v33.yaml  月岡恋鐘_v33.yaml  椎名まゆり_v31.yaml  椎名まゆり_v33.yaml  橋田至_v31.yaml  橋田至ダル_v33.yaml  牧瀬紅莉栖_v3.yaml  牧瀬紅莉栖_v33.yaml
divergence_z/requests/: Snape_test.yaml  kurisu_context_alone.yaml  kurisu_context_daily.yaml  kurisu_context_jealous.yaml  kurisu_context_monologue.yaml  kurisu_context_tense.yaml  kurisu_generated.yaml  kurisu_generated2.yaml  kurisu_v2_test.yaml  (+20 more)
personas/: casual_friend_v2.yaml  tanonda_sensitivity_matrix.yaml  レム_v2.yaml
(+5 files in other folders)
