[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "divergence-z"
version = "0.1.0"
description = "Z-Axis Translation System — Action-Preserving Translation for Fictional Speech"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "MASAMICHI IIZUMI", email = "masamichi@miosync.com"}
]
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "anthropic>=0.18.0",
    "openai>=1.0.0",
    "pyyaml>=6.0",
    "python-dotenv>=1.0.0",
    "requests>=2.28.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[project.scripts]
z-axis-translate = "divergence_z.z_axis_translate:main"
persona-generator = "divergence_z.persona_generator:main"
iap-evaluator = "divergence_z.iap_evaluator:main"
zap-evaluator = "divergence_z.zap_evaluator:main"
yaml-generator = "divergence_z.yaml_generator:main"
yaml-formatter = "divergence_z.yaml_formatter:main"
z-axis-reverse = "divergence_z.z_axis_reverse:main"

[project.urls]
Homepage = "https://github.com/miosync/divergence-z"
Repository = "https://github.com/miosync/divergence-z"

[tool.setuptools.packages.find]
where = ["."]
include = ["divergence_z*"]

[tool.setuptools.package-data]
divergence_z = ["personas/*.yaml", "requests/*.yaml", "scripts/*.txt"]

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "W"]
ignore = ["E501"]
